[metadata]
name = posthub
version = attr: posthub.__version__
url = https://github.com/pyflow/posthub
project_urls =
    Source Code = https://github.com/pyflow/posthub/
    Issue Tracker = https://github.com/pyflow/posthub/issues/

license = MIT License
author = Zhuo Wei
author_email = zeaphoo@qq.com
maintainer = Zhuo Wei
maintainer_email = zeaphoo@qq.com
description = provides locker, pubsub and queue functions on postgresql.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: PL/SQL
    Framework :: AsyncIO
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Operating System :: POSIX


[options]
packages = find:
package_dir = = posthub
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = posthub

[tool:pytest]
testpaths = tests
asyncio_mode = strict
filterwarnings =
    error
    ignore:.*:ResourceWarning